
[tool.poetry]
name = "pypxl"
version = "0.1.0"
description = "An Asynchronos API wrapper for https://pxlapi.dev"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kile/pypxl"
authors = ["Daggy1234 <daggy@daggy.tech>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.3"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
