
[tool.poetry]
name = "pypxl"
version = "0.2.3"
description = "An Asynchronos API wrapper for https://pxlapi.dev"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kile/pypxl"
authors = ["Kile <Kile@killua.dev>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.3"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
